--- a/02.variables.yaml
+++ b/02.variables.yaml
@@ -2,9 +2,10 @@
   hosts: local
   connection: local
   vars:
-    EMPNAME: sateesh
+    EMPNAME: "sateesh"
     ID: 1320733
   tasks:
   - name: print the varaiables
     ansible.builtin.debug:
+      msg: " Employee id is {{ EMPNAME }} "
       msg: " Employee id is {{ ID }} "
