--- a/04.Installnginx.yaml
+++ b/04.Installnginx.yaml
@@ -7,5 +7,10 @@
     ansible.builtin.package:
      name: nginx
      state: present
+  - name: Start and enable nginx   
+    ansible.builtin.service: 
+     name: nginx
+     state: started
+     enabled: yes
 
 
