--- a/02.variables.yaml
+++ b/02.variables.yaml
@@ -1,8 +1,20 @@
-- name: play level variables
+- name: Inventory level variables
   hosts: local
   connection: local
   tasks:
   - name: print variables
     ansible.builtin.debug:
       msg: "I need {{ SERVICE }} with Database {{ DB }}"
+
+- name: Task level varaiables
+  hosts: local
+  connection: local
+  vars:
+   NAME: "SATEESH"
+  tasks:
+  - name: printing task level varaiables
+    vars:
+     NAME: " Shiva kumar Reddy"
+    ansible.builtin.debug:
+     msg: "Trainerr name is {{ NAME }}"      
       
